# vicharak_firmware

./: README.md
main/: CMakeLists.txt  main.c  spiffs_example_main.c
